--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jdbc-mysql</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
@@ -127,6 +131,18 @@
           </execution>
         </executions>
       </plugin>
+      <!-- <plugin>
+        <groupId>io.quarkus</groupId>
+        <artifactId>quarkus-extension-maven-plugin</artifactId>
+        <configuration>
+            <capabilities>
+                <providesIf> 
+                    <positive>io.quarkus.container.image.openshift.deployment.OpenshiftBuild</positive> 
+                    <name>io.quarkus.container.image.openshift</name> 
+                </providesIf>
+            </capabilities>
+        </configuration>
+    </plugin> -->
     </plugins>
   </build>
   <profiles>
